--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,6 +14,7 @@ html
 		script(type="text/javascript", src="/scripts/jquery.min.js")
 		script(type="text/javascript", src="/scripts/jquery-ui.min.js")
 		script(type="text/javascript", src="/scripts/leaflet.js")
+		script(type="text/javascript", src="/scripts/vue.min.js")
 		script(type="text/javascript", src="/scripts/d3.v3.min.js")
 		script(type="text/javascript", src="/scripts/fabric.min.js")
 		script(type="text/javascript", src="/scripts/pickadate/picker.js")
@@ -22,6 +23,7 @@ html
 		script(type="text/javascript", src="/scripts/Dropdown.js")
 		script(type="text/javascript", src="/scripts/navbar.js")
 		script(type="text/javascript", src="/scripts/Panel.js")
+
 	body
 		block page
 		
