--- a/views/publish.pug
+++ b/views/publish.pug
@@ -218,6 +218,7 @@ block content
 			console.log(d, that)
 			var list = 0;
 			var bounds = [];
+			$('.list').addClass('view');
 			$('.list > .ms-Grid > .ms-Panel-contentInner').html('')
 			for (var i in grid) {
 				for (var j in grid[i]) {
