--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -382,7 +382,7 @@ hr {
 }
 
 .ms-Panel--small, .ms-Panel--medium {
-	display: none;
+	/* display: none; */
 	top: 50%;
 	background-color: rgba(255, 255, 255, 0);
 	background-image: radial-gradient(circle at 50% 0, rgba(255, 255, 255, 0) 18px, rgba(255, 255, 255, 1) 17px);
